data/Java/12-incomp-string-int/2/[M]Error.txt
https://coderanch.com/t/527896/java/converting-String-int
MyClass.java:4: error: incompatible types: 'String' cannot be converted to 'int'
        int intRating = (int) rating;
                              ^